--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -107,25 +107,78 @@
         
         // Body
         const bodyGeometry = new THREE.BoxGeometry(1, 0.5, 1.5);
-        const bodyMaterial = new THREE.MeshPhongMaterial({ color: 0x4444ff });
+        const bodyMaterial = new THREE.MeshPhongMaterial({ 
+            color: 0x4444ff,
+            metalness: 0.7,
+            roughness: 0.3,
+            emissive: 0x112244
+        });
         const body = new THREE.Mesh(bodyGeometry, bodyMaterial);
         robot.add(body);
 
         // Head
         const headGeometry = new THREE.SphereGeometry(0.3, 32, 32);
-        const headMaterial = new THREE.MeshPhongMaterial({ color: 0x44ff44 });
+        const headMaterial = new THREE.MeshPhongMaterial({ 
+            color: 0x44ff44,
+            metalness: 0.8,
+            roughness: 0.2,
+            emissive: 0x112211
+        });
         const head = new THREE.Mesh(headGeometry, headMaterial);
         head.position.y = 0.4;
         robot.add(head);
 
+        // Eyes
+        const eyeGeometry = new THREE.SphereGeometry(0.05, 16, 16);
+        const eyeMaterial = new THREE.MeshPhongMaterial({ 
+            color: 0xff0000,
+            emissive: 0xff0000,
+            emissiveIntensity: 0.5
+        });
+        const leftEye = new THREE.Mesh(eyeGeometry, eyeMaterial);
+        leftEye.position.set(0.15, 0.45, 0.25);
+        const rightEye = leftEye.clone();
+        rightEye.position.x = -0.15;
+        robot.add(leftEye);
+        robot.add(rightEye);
+
+        // Antenna
+        const antennaGeometry = new THREE.CylinderGeometry(0.02, 0.02, 0.3);
+        const antennaMaterial = new THREE.MeshPhongMaterial({ color: 0x888888 });
+        const antenna = new THREE.Mesh(antennaGeometry, antennaMaterial);
+        antenna.position.y = 0.8;
+        robot.add(antenna);
+
         scene.add(robot);
 
-        // Add lighting
-        const ambientLight = new THREE.AmbientLight(0xffffff, 0.5);
+        // Enhanced lighting setup
+        const ambientLight = new THREE.AmbientLight(0xffffff, 0.4);
         scene.add(ambientLight);
-        const directionalLight = new THREE.DirectionalLight(0xffffff, 0.5);
+
+        const directionalLight = new THREE.DirectionalLight(0xffffff, 0.8);
         directionalLight.position.set(5, 5, 5);
+        directionalLight.castShadow = true;
         scene.add(directionalLight);
+
+        const spotLight = new THREE.SpotLight(0x4444ff, 1);
+        spotLight.position.set(0, 5, 0);
+        spotLight.angle = Math.PI / 6;
+        spotLight.penumbra = 0.3;
+        scene.add(spotLight);
+
+        // Add fog for depth
+        scene.fog = new THREE.Fog(0x1a1a1a, 5, 15);
+
+        // Enable shadows
+        renderer.shadowMap.enabled = true;
+        renderer.shadowMap.type = THREE.PCFSoftShadowMap;
+        gridHelper.receiveShadow = true;
+        robot.traverse(child => {
+            if (child instanceof THREE.Mesh) {
+                child.castShadow = true;
+                child.receiveShadow = true;
+            }
+        });
 
         // Motion trail
         const trail = [];
